--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "hex-to-binary": "^1.0.1",
     "jest": "^23.6.0",
     "redis": "^2.8.0",
+    "request": "^2.88.0",
     "socket.io": "~0.9.14"
   },
   "scripts": {
     "start": "node index.js",
     "test": "jest --watchAll",
     "dev": "npm run start-redis && nodemon index.js",
-    "start-redis":"redis-server --daemonize yes"
+    "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js",
+    "start-redis": "redis-server --daemonize yes"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "jest": "^23.6.0",
     "nodemon": "^1.18.4"
   },
