--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "async": "~0.2.8",
     "body-parser": "^1.18.3",
+    "elliptic": "^6.4.1",
     "express": "^4.16.3",
     "hex-to-binary": "^1.0.1",
     "jest": "^23.6.0",
@@ -27,6 +28,7 @@
     "nodemon": "^1.18.4"
   },
   "jest": {
+    "testEnvironment": "node",
     "testPathIgnorePatterns": [
       ".c9"
     ]
