--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "jest": "^23.6.0",
     "redis": "^2.8.0",
     "request": "^2.88.0",
-    "socket.io": "~0.9.14"
+    "socket.io": "~0.9.14",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "node index.js",
