--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "elliptic": "^6.4.1",
     "express": "^4.16.3",
     "hex-to-binary": "^1.0.1",
+    "history": "^4.7.2",
     "jest": "^23.6.0",
     "parcel-bundler": "^1.10.3",
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1",
     "redis": "^2.8.0",
     "request": "^2.88.0",
     "socket.io": "~0.9.14",
@@ -32,8 +34,8 @@
     "dev": "npm run dev-client & npm run start-redis && nodemon index.js",
     "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js",
     "start-redis": "redis-server --daemonize yes",
-    "build-client": "npm run clean && parcel -p 8081 build client/src/index.html --out-dir client/dist",
-    "dev-client": "npm run clean && parcel -p 8081 client/src/index.html --out-dir client/dist",
+    "build-client": "npm run clean && parcel -p 8080 build client/src/index.html --out-dir client/dist",
+    "dev-client": "npm run clean && parcel -p 8080 client/src/index.html --out-dir client/dist",
     "clean": "rm -rf .cache client/dist"
   },
   "devDependencies": {
