--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   "scripts": {
     "start": "npm run build-client && node index.js",
     "test": "jest --watchAll",
-    "dev": "npm run dev-client & npm run start-redis && nodemon index.js",
-    "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js",
+    "dev": "npm run dev-client & npm run start-redis && cross-env ENV=development nodemon index.js",
+    "dev-peer": "cross-env GENERATE_PEER_PORT='true' ENV=development nodemon index.js",
     "start-redis": "redis-server --daemonize yes",
     "build-client": "npm run clean && parcel -p 8080 build client/src/index.html --out-dir client/dist",
     "dev-client": "npm run clean && parcel -p 8080 client/src/index.html --out-dir client/dist",
